<resources>
    <string name="app_name">PUBLICSERVICE</string>
    <string name="hello_world">huduma mashinani</string>
    <string name="button_text">YEF</string>
    <string name="register">Register</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="AppTheme">Theme</string>
    <string name="frequent">How can i download my driving license?</string>
    <string name="answer">Click on the Ecitizen link which would directly you to your portfolio, enter you credential you are good to go.</string>
    <string name="question">How can i download my KRA PIN?</string>
    <string name="answer2">Click on the KRA image to login to your KRA account, on your account loyout click on kra form</string>
    <string name="question2">How can our youth group access tender?</string>
    <string name="answer3">Click on the AGPO image to create an account which will direct you to your account to access procurement opportunities just login and you will be there.</string>
    <string name="kra">How can i file my tax return online?</string>
    <string name="kranswer">Click on the KRA image which will redirect you to your KRA account</string>
    <string name="kraquestion">how can download my driving license?</string>
    <string name="kranswer1">Click on the E-Citizen link which will direct you to your account</string>
    <string name="publicQuestion">I you looking for a job?Apply for a government job and get updates when you get a chance.</string>
    <string name="publeicAnswer">Click on Public Service Commission link to get a chance today for a government job.</string>
    <string name="loginInfo">Create an Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
