<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/youthday"
    android:weightSum="10"
    tools:context=".FrequentAskedQuestions">

    <TextView
        android:id="@+id/frequentQA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequent"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/questionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/answerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/questionId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="296dp" />

    <TextView
        android:id="@+id/FAQkra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kra"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kranswer"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kraquestion"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_dark"/>

    />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kranswer1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>
    />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicQuestion"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/holo_red_dark"/>
    />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publeicAnswer"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>
    />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />



</LinearLayout>